# gobin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: dump.rs
src/: detection.rs  formats.rs  lib.rs  metadata.rs
src/structures/: abitype.rs  arraytype.rs  buildid.rs  buildinfo.rs  chantype.rs  descriptor.rs  elemtype.rs  functype.rs  goslice.rs  gostring.rs  inline.rs  interfacetype.rs  itab.rs  kind.rs  maptype.rs  method.rs  mod.rs  moduledata.rs  name.rs  pclntab.rs  strings.rs  structtype.rs  types.rs  uncommon.rs  util.rs
tests/: integration.rs
tests/samples/: basic_stripped  minimal_normal  minimal_stripped
