[package]
name = "gobin"
version = "0.2.0"
edition = "2024"
authors = ["Johann Kempter <admin@binflip.rs>"]
rust-version = "1.85"
description = "Static analysis library for Go compiled binaries - identification and metadata extraction"
license = "Apache-2.0"
repository = "https://github.com/BinFlip/gobin"
readme = "README.md"
keywords = ["golang", "go", "parser", "reverse-engineering", "binary-analysis"]
categories = ["parser-implementations"]
exclude = ["tests/samples/"]

[dependencies]
goblin = "0.10.5"

[dev-dependencies]
